# categorifier-c

./: .gitignore  .hlint.yaml  CHANGELOG.md  README.md  cabal.project  categorifier-c.cabal  default.nix  flake.nix  kitty-cat-c.cabal  nixpkgs.nix
.github/workflows/: ci.yml
Categorifier/C/: Barbies.hs  Client.hs  Generate.hs  Graph.hs  PolyVec.hs  Prim.hs
Categorifier/C/CExpr/: C.hs  Cat.hs  File.hs  Function.hs  FunctionCall.hs  IO.hs  Normalize.hs  Types.hs
Categorifier/C/CExpr/C/: Assignment.hs  Operations.hs  Pretty.hs
Categorifier/C/CExpr/Cat/: TargetOb.hs
Categorifier/C/CExpr/Types/: Core.hs  Operations.hs
Categorifier/C/CTypes/: ArrayLengths.hs  CGeneric.hs  GArrays.hs  Instances.hs  KTypeRep.hs  Render.hs  ToArrays.hs  ToCxxType.hs  Traverse.hs  Types.hs  WhyNotCType.hs
Categorifier/C/CTypes/CGeneric/: Class.hs  Plugin.hs
Categorifier/C/CTypes/Codegen/: Arrays.hs  CborSerialisation.hs  DataLayout.hs  EnumUtils.hs  Helpers.hs  IsEqual.hs  NonFinite.hs  PrintDifferences.hs  Run.hs  Sanitize.hs  SimpleModule.hs  ToString.hs  TypesHeaders.hs
Categorifier/C/CTypes/Codegen/Arrays/: Types.hs
Categorifier/C/CTypes/Codegen/Render/: Render.hs  Typedefs.hs  Utils.hs
Categorifier/C/CTypes/DSL/: CxxAst.hs  FunctionWriter.hs
Categorifier/C/Client/: Internal.hs
Categorifier/C/Codegen/: ToKioTypes.hs
Categorifier/C/Codegen/Cxx/: WrapKGenCFunction.hs
Categorifier/C/Graph/: Fold.hs  Reify.hs
Categorifier/C/Hierarchy/: Specialized.hs
Categorifier/C/KTypes/: BooleanLogic.hs  C.hs  Conditional.hs  Equality.hs  FromIntegral.hs  Function.hs  IEEE.hs  KBits.hs  KDivisible.hs  KEnum.hs  KLiteral.hs  Libm.hs  Round.hs  SwitchCase.hs  TotalOrder.hs
Categorifier/C/KTypes/CExpr/: Generate.hs
Categorifier/C/KTypes/Sum/: Maybe.hs
Categorifier/C/Lens/: Rules.hs
Categorifier/C/Nat/: Operators.hs
Categorifier/C/Prim/: ArrayCount.hs  ArrayLens.hs  ArrayName.hs  ArrayVec.hs  Base.hs  ConstArrays.hs  Helpers.hs  Patterns.hs
Categorifier/C/TypeUtils/: Lists.hs
Kitty/: Barbies.hs  Graph.hs  HK1.hs  HK2.hs  Lens.hs  PolyVec.hs  Prim.hs
Kitty/CExpr/: C.hs  Cat.hs  File.hs  Function.hs  FunctionCall.hs  IO.hs  Normalize.hs  Types.hs
Kitty/CExpr/C/: Assignment.hs  Operations.hs  Pretty.hs
Kitty/CExpr/Cat/: TargetOb.hs
Kitty/CExpr/Types/: Core.hs  Operations.hs
Kitty/CTypes/: ArrayLengths.hs  CGeneric.hs  GArrays.hs  Instances.hs  KTypeRep.hs  Render.hs  ToArrays.hs  ToCxxType.hs  Traverse.hs  Types.hs
Kitty/CTypes/CGeneric/: Class.hs  Plugin.hs
Kitty/Cat/: Client.hs
Kitty/Cat/Client/: Internal.hs
Kitty/Graph/: Fold.hs  Reify.hs
Kitty/HK1/: Identity.hs  Unit.hs
Kitty/HK2/: Const.hs  Unit.hs
Kitty/KTypes/: BooleanLogic.hs  C.hs  Conditional.hs  Equality.hs  FromIntegral.hs  Function.hs  IEEE.hs  KBits.hs  KDivisible.hs  KEnum.hs  KLiteral.hs  Libm.hs  Round.hs  SwitchCase.hs  TotalOrder.hs
Kitty/KTypes/CExpr/: Generate.hs
Kitty/KTypes/Sum/: Maybe.hs
Kitty/Lens/: Rules.hs
Kitty/Nat/: Operators.hs
Kitty/Prim/: ArrayCount.hs  ArrayLens.hs  ArrayName.hs  ArrayVec.hs  Base.hs  ConstArrays.hs  Helpers.hs  Patterns.hs
Kitty/TypeUtils/: Lists.hs
examples/: categorifier-c-examples.cabal
examples/auto-interpret/: F.hs  Main.hs
examples/c-types/: Main.hs
examples/c-wrappers/: F.hs  Main.hs
examples/external-c-functions/: CTypes.hs  F.hs  Main.hs  README.md  very_useful_function.c  very_useful_function.h  very_useful_function_wrapper.c  very_useful_function_wrapper.h
examples/grad-descent/: F.hs  Main.hs
examples/multiple-c-functions/: F.hs  Main.hs
examples/recursive-types/: F.hs  Main.hs
examples/recursive-types-2/: F.hs  Main.hs
examples/separate-categorification/: F.hs  G.hs  Main.hs
examples/simple/: F.hs  Main.hs
examples/sum-types/: F.hs  Main.hs
examples/template/: F.hs  Main.hs  TH.hs  build.sh
examples/th-compile/: F.hs  Main.hs  build.sh
hk-classes/: categorifier-c-hk-classes.cabal  kitty-cat-c-hk-classes.cabal
hk-classes/Categorifier/C/KTypes/: ArcTan2.hs  FMod.hs  KType1.hs
hk-classes/Kitty/KTypes/: ArcTan2.hs  FMod.hs  KType1.hs
maker-map/: categorifier-c-maker-map.cabal
maker-map/Categorifier/C/: MakerMap.hs
recursion/: categorifier-c-recursion.cabal  kitty-cat-c-recursion.cabal
recursion/Categorifier/C/: Higher.hs  Recursion.hs
recursion/Kitty/: Higher.hs  Recursion.hs
show/: categorifier-c-show.cabal  kitty-cat-c-show.cabal
show/Categorifier/C/: Show.hs
show/Kitty/: Show.hs
test-lib/: categorifier-c-test-lib.cabal  kitty-cat-c-test-lib.cabal
test-lib/Categorifier/C/Codegen/FFI/: ArraysCC.hs  Call.hs  Foreign.hs  Spec.hs  TH.hs
test-lib/Categorifier/C/KGen/: KGen.hs  TH.hs
test-lib/Categorifier/C/KGenGenerate/FFI/: Bindings.hs  Gen.hs  JIT.hs  Plugin.hs  Spec.hs
test-lib/Categorifier/C/KGenGenerate/Test/: Equality.hs  Error.hs  GenerateTyped.hs  IProduct.hs  InputReader.hs  Plugin.hs  Pretty.hs  Subprocess.hs
test-lib/Categorifier/C/Prim/: Hedgehog.hs
test-lib/Kitty/Codegen/FFI/: ArraysCC.hs  Foreign.hs  Spec.hs
test-lib/Kitty/KGen/: KGen.hs
test-lib/Kitty/KGenGenerate/FFI/: JIT.hs  Spec.hs
test-lib/Kitty/KGenGenerate/Test/: Error.hs  GenerateTyped.hs  IProduct.hs  InputReader.hs  Plugin.hs  Pretty.hs
tests/: categorifier-c-tests.cabal  kitty-cat-c-tests.cabal
tests/ffi/Kitty/Codegen/FFI/: Call.hs  Spec.hs
tests/functions/: Functions.hs
tests/hedgehog_options/Categorifier/C/Hedgehog/: Options.hs  Paths.hs
tests/hedgehog_options/Kitty/Hedgehog/: Options.hs  Paths.hs
tests/kgen/Kitty/KGen/: TH.hs
tests/kgen/Kitty/KGenGenerate/FFI/: Bindings.hs  Gen.hs  Plugin.hs  Spec.hs
tests/kgen/Kitty/KGenGenerate/Test/: Equality.hs  GenerateTyped.hs  InputReader.hs  Plugin.hs  Pretty.hs  Subprocess.hs
tests/kgen/Kitty/Prim/: Hedgehog.hs
tests/random_expressions/: RandomExpressions.hs
unconcat/: categorifier-c-unconcat.cabal  kitty-cat-c-unconcat.cabal
unconcat/Categorifier/C/: UnconCat.hs
unconcat/Kitty/Cat/Plugin/: UnconCat.hs
