cabal-version:  2.4

name:           kitty-cat-c
version:        0.1
description:    kitty-cat's CExpr backend.
homepage:       https://github.com/kitty-dog/kitty-cat-c#readme
bug-reports:    https://github.com/kitty-dog/kitty-cat-c/issues
build-type:     Simple
tested-with:    GHC==8.10.1

source-repository head
  type: git
  location: https://github.com/kitty-dog/kitty-cat-c

library
  exposed-modules:
      Kitty.Barbies
      Kitty.CExpr.Cat.TargetOb
      Kitty.HK1
      Kitty.HK1.Identity
      Kitty.HK1.Unit
      Kitty.HK2
      Kitty.HK2.Const
      Kitty.HK2.Unit
      Kitty.TypeUtils.Lists
  other-modules:
      Paths_kitty_cat_c
  autogen-modules:
      Paths_kitty_cat_c
  ghc-options: -Wall
  build-depends:
      adjunctions >=4.4 && <5
    , barbies >=2.0.1.0 && <2.1
    , base >=4.14 && <4.15
    , deepseq >=1.4.4.0 && <1.5
    , either >=5.0.1.1 && <6
    , generic-accessors >=0.7.1.0 && <0.8
    , hashable >=1.3.0.0 && <1.5
    , lens >=4.19.2 && <6
    , serialise >=0.2.3.0 && <0.3
    , transformers >=0.5.6.2 && <0.7
    , QuickCheck >=2.13.2 && <3
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , NoStarIsType
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies
