cabal-version:  2.4

name:           kitty-cat-c
version:        0.1
description:    kitty-cat's CExpr backend.
homepage:       https://github.com/con-kitty/kitty-cat-c#readme
bug-reports:    https://github.com/con-kitty/kitty-cat-c/issues
build-type:     Simple
tested-with:    GHC==8.10.1

source-repository head
  type: git
  location: https://github.com/con-kitty/kitty-cat-c

library
  exposed-modules:
      Kitty.Barbies
      Kitty.CExpr.Cat.TargetOb
      Kitty.CExpr.FunctionCall
      Kitty.CExpr.Types
      Kitty.CExpr.Types.Core
      Kitty.CExpr.Types.Operations
      Kitty.CTypes.ArrayLengths
      Kitty.CTypes.CGeneric.Class
      Kitty.CTypes.CGeneric.Plugin
      Kitty.CTypes.GArrays
      Kitty.CTypes.KTypeRep
      Kitty.CTypes.Instances
      Kitty.CTypes.Render
      Kitty.CTypes.ToArrays
      Kitty.CTypes.ToCxxType
      Kitty.CTypes.Traverse
      Kitty.CTypes.Types
      Kitty.Graph
      Kitty.Graph.Fold
      Kitty.Graph.Reify
      Kitty.HK1
      Kitty.HK1.Identity
      Kitty.HK1.Unit
      Kitty.HK2
      Kitty.HK2.Const
      Kitty.HK2.Unit
      Kitty.KTypes.BooleanLogic
      Kitty.KTypes.Conditional
      Kitty.KTypes.Equality
      Kitty.KTypes.FromIntegral
      Kitty.KTypes.Function
      Kitty.KTypes.IEEE
      Kitty.KTypes.KBits
      Kitty.KTypes.KDivisible
      Kitty.KTypes.KEnum
      Kitty.KTypes.KLiteral
      Kitty.KTypes.Round
      Kitty.KTypes.SwitchCase
      Kitty.KTypes.TotalOrder
      Kitty.Lens
      Kitty.Lens.Rules
      Kitty.Nat.Operators
      Kitty.PolyVec
      Kitty.Prim
      Kitty.Prim.ArrayCount
      Kitty.Prim.ArrayLens
      Kitty.Prim.ArrayName
      Kitty.Prim.ArrayVec
      Kitty.Prim.Base
      Kitty.Prim.ConstArrays
      Kitty.Prim.Helpers
      Kitty.Prim.Patterns
      Kitty.TypeUtils.Lists
  other-modules:
      Paths_kitty_cat_c
  autogen-modules:
      Paths_kitty_cat_c
  ghc-options: -Wall
  build-depends:
      adjunctions >=4.4 && <5
    , barbies >=2.0.1.0 && <2.1
    , base >=4.14 && <4.15
    , bytestring >=0.10.10.0 && <0.12
    , casing >=0.1.4.1 && <0.2
    , containers >=0.6.2.1 && <0.7
    , deepseq >=1.4.4.0 && <1.5
    , either >=5.0.1.1 && <6
    -- TODO: support fin-0.2
    , fin >=0.1.1 && <0.2
    , generic-accessors >=0.7.1.0 && <0.8
    , generic-deriving >=1.13.1 && <1.15
    , hashable >=1.3.0.0 && <1.5
    , lens >=4.19.2 && <6
    , primitive >=0.7.1.0 && <0.8
    , serialise >=0.2.3.0 && <0.3
    , tagged >=0.8.6 && <0.9
    , template-haskell >=2.16.0.0 && <2.19
    , text >=1.2.3.2 && <1.3
    , transformers >=0.5.6.2 && <0.7
    , unordered-containers >=0.2.13.0 && <0.3
    , vec >=0.3 && <0.5
    , vector >=0.12.1.2 && <0.13
    , PyF >=0.9.0.2 && <0.11
    , QuickCheck >=2.13.2 && <3
    , kitty-cat-c-recursion
    , kitty-cat-c-show
    , kitty-cat-client
    , kitty-cat-common
    , kitty-cat-duoids
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , NoStarIsType
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies
