cabal-version:  2.4

name:           kitty-cat-c
version:        0.1
description:    kitty-cat's CExpr backend.
homepage:       https://github.com/con-kitty/kitty-cat-c#readme
bug-reports:    https://github.com/con-kitty/kitty-cat-c/issues
build-type:     Simple
tested-with:    GHC==8.10.1

source-repository head
  type: git
  location: https://github.com/con-kitty/kitty-cat-c

library
  exposed-modules:
      Kitty.Barbies
      Kitty.CExpr.C
      Kitty.CExpr.C.Assignment
      Kitty.CExpr.C.Operations
      Kitty.CExpr.C.Pretty
      Kitty.CExpr.Cat
      Kitty.CExpr.Cat.TargetOb
      Kitty.CExpr.File
      Kitty.CExpr.Function
      Kitty.CExpr.FunctionCall
      Kitty.CExpr.IO
      Kitty.CExpr.Normalize
      Kitty.CExpr.Types
      Kitty.CExpr.Types.Core
      Kitty.CExpr.Types.Operations
      Kitty.CTypes.ArrayLengths
      Kitty.CTypes.CGeneric
      Kitty.CTypes.CGeneric.Class
      Kitty.CTypes.CGeneric.Plugin
      Kitty.CTypes.GArrays
      Kitty.CTypes.KTypeRep
      Kitty.CTypes.Instances
      Kitty.CTypes.Render
      Kitty.CTypes.ToArrays
      Kitty.CTypes.ToCxxType
      Kitty.CTypes.Traverse
      Kitty.CTypes.Types
      Kitty.Cat.Client.Internal
      Kitty.Graph
      Kitty.Graph.Fold
      Kitty.Graph.Reify
      Kitty.KTypes.BooleanLogic
      Kitty.KTypes.C
      Kitty.KTypes.CExpr.Generate
      Kitty.KTypes.Conditional
      Kitty.KTypes.Equality
      Kitty.KTypes.FromIntegral
      Kitty.KTypes.Function
      Kitty.KTypes.IEEE
      Kitty.KTypes.KBits
      Kitty.KTypes.KDivisible
      Kitty.KTypes.KEnum
      Kitty.KTypes.KLiteral
      Kitty.KTypes.Libm
      Kitty.KTypes.Round
      Kitty.KTypes.SwitchCase
      Kitty.KTypes.TotalOrder
      Kitty.Lens.Rules
      Kitty.Nat.Operators
      Kitty.PolyVec
      Kitty.Prim
      Kitty.Prim.ArrayCount
      Kitty.Prim.ArrayLens
      Kitty.Prim.ArrayName
      Kitty.Prim.ArrayVec
      Kitty.Prim.Base
      Kitty.Prim.ConstArrays
      Kitty.Prim.Helpers
      Kitty.Prim.Patterns
      Kitty.TypeUtils.Lists
  other-modules:
      Paths_kitty_cat_c
  autogen-modules:
      Paths_kitty_cat_c
  ghc-options:
      -O0
      -fexpose-all-unfoldings
      -fno-omit-interface-pragmas
      -Wall
  build-depends:
      PyF
    , QuickCheck
    , adjunctions
    , aeson
    , barbies
    , base
    , bytestring
    , casing
    , constraints
    , containers
    , deepseq
    , dlist
    , either
    , extra
    , fin
    , generic-accessors
    , generic-deriving
    , hashable
    , lens
    , prettyprinter
    , primitive
    , serialise
    , tagged
    , template-haskell
    , text
    , transformers
    , unordered-containers
    , vec
    , vector
    -- Below are source-repository-packages
    , concat-classes
    , connections
    , kitty-cat-c-recursion
    , kitty-cat-c-show
    , kitty-cat-category
    , kitty-cat-category-kitty
    , kitty-cat-category-unconcat
    , kitty-cat-client
    , kitty-cat-common
    , kitty-cat-duoids
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , NoStarIsType
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies
