cabal-version:  2.4

name:           categorifier-c-examples
version:        0.1
homepage:       https://github.com/con-kitty/categorifier-c#readme
bug-reports:    https://github.com/con-kitty/categorifier-c/issues
build-type:     Simple
tested-with:    GHC==8.10.1, GHC==8.10.2, GHC==8.10.4, GHC==8.10.7

source-repository head
  type: git
  location: https://github.com/con-kitty/categorifier-c

executable simple
  hs-source-dirs: simple
  main-is: Main.hs
  other-modules:
      F
  ghc-options:
      -O0
      -fexpose-all-unfoldings
      -fmax-simplifier-iterations=0
      -fno-ignore-interface-pragmas
      -fno-omit-interface-pragmas
      -Wall
      -fplugin Categorifier
      -fplugin-opt Categorifier:hierarchy:Categorifier.Hierarchy.UnconCat.hierarchy
      -fplugin-opt Categorifier:hierarchy:Categorifier.Hierarchy.ConCat.functionHierarchy
      -fplugin-opt Categorifier:hierarchy:Categorifier.Hierarchy.ConCatExtensions.hierarchy
  build-depends:
      base
    , ghc-prim
    , concat-classes
    , categorifier-c
    , categorifier-category
    , categorifier-client
    , categorifier-concat-extensions-category
    , categorifier-concat-extensions-integration
    , categorifier-concat-integration
    , categorifier-plugin
    , categorifier-unconcat-category
    , categorifier-unconcat-integration
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , NoStarIsType
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies
