cabal-version:  2.4

name:           categorifier-c-hk-classes
version:        0.1
homepage:       https://github.com/con-kitty/categorifier-c#readme
bug-reports:    https://github.com/con-kitty/categorifier-c/issues
build-type:     Simple
tested-with:    GHC==8.10.1, GHC==8.10.2, GHC==8.10.4, GHC==8.10.7, GHC==9.0.1, GHC==9.0.2

source-repository head
  type: git
  location: https://github.com/con-kitty/categorifier-c

library
  exposed-modules:
      Categorifier.C.KTypes.ArcTan2
      Categorifier.C.KTypes.FMod
      Categorifier.C.KTypes.KType1
  ghc-options:
      -O0
      -fexpose-all-unfoldings
      -fno-omit-interface-pragmas
      -Wall
  build-depends:
      base
    , categorifier-c
    , categorifier-c-recursion
    , categorifier-concat-extensions-category
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , NoStarIsType
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies
