cabal-version:  2.4

name:           kitty-cat-c-hk-classes
version:        0.1
homepage:       https://github.com/con-kitty/kitty-cat-c#readme
bug-reports:    https://github.com/con-kitty/kitty-cat-c/issues
build-type:     Simple
tested-with:    GHC==8.10.1

source-repository head
  type: git
  location: https://github.com/con-kitty/kitty-cat-c

library
  exposed-modules:
      Kitty.KTypes.ArcTan2
      Kitty.KTypes.FMod
      Kitty.KTypes.KType1
  ghc-options:
      -O0
      -fexpose-all-unfoldings
      -fno-omit-interface-pragmas
      -Wall
  build-depends:
      base
    , kitty-cat-c
    , kitty-cat-c-recursion
    , kitty-cat-kitty-category
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , NoStarIsType
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies
