cabal-version:  2.4

name:           categorifier-c-recursion
version:        0.1
description:    A recursion library for categorifier's CExpr backend.
homepage:       https://github.com/con-kitty/categorifier-c#readme
bug-reports:    https://github.com/con-kitty/categorifier-c/issues
build-type:     Simple
tested-with:    GHC==8.10.1, GHC==8.10.2, GHC==8.10.4, GHC==8.10.7, GHC==9.0.1, GHC==9.0.2

source-repository head
  type: git
  location: https://github.com/con-kitty/categorifier-c

library
  exposed-modules:
      Categorifier.C.Higher
      Categorifier.C.Recursion
  other-modules:
      Paths_categorifier_c_recursion
  autogen-modules:
      Paths_categorifier_c_recursion
  ghc-options: -Wall
  build-depends:
      barbies
    , base
    , deepseq
    , hashable
    , yaya
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , NoStarIsType
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies
