cabal-version:  2.4

name:           categorifier-c-show
version:        0.1
description:    A pretty-printing library for categorifier's CExpr backend.
homepage:       https://github.com/con-kitty/categorifier-c#readme
bug-reports:    https://github.com/con-kitty/categorifier-c/issues
build-type:     Simple
tested-with:    GHC==8.10.1, GHC==8.10.2, GHC==8.10.4

source-repository head
  type: git
  location: https://github.com/con-kitty/categorifier-c

library
  exposed-modules:
      Categorifier.C.Show
  other-modules:
      Paths_categorifier_c_show
  autogen-modules:
      Paths_categorifier_c_show
  ghc-options: -Wall
  build-depends:
      base
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , NoStarIsType
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies
