cabal-version:  2.4

name:           kitty-cat-c-show
version:        0.1
description:    A pretty-printing library for kitty-cat's CExpr backend.
homepage:       https://github.com/con-kitty/kitty-cat-c#readme
bug-reports:    https://github.com/con-kitty/kitty-cat-c/issues
build-type:     Simple
tested-with:    GHC==8.10.1, GHC==8.10.2, GHC==8.10.4

source-repository head
  type: git
  location: https://github.com/con-kitty/kitty-cat-c

library
  exposed-modules:
      Kitty.Show
  other-modules:
      Paths_kitty_cat_c_show
  autogen-modules:
      Paths_kitty_cat_c_show
  ghc-options: -Wall
  build-depends:
      base
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , NoStarIsType
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies
