cabal-version:  2.4

name:           kitty-cat-c-test-lib
version:        0.1
homepage:       https://github.com/con-kitty/kitty-cat-c#readme
bug-reports:    https://github.com/con-kitty/kitty-cat-c/issues
build-type:     Simple
tested-with:    GHC==8.10.1, GHC==8.10.2, GHC==8.10.4

source-repository head
  type: git
  location: https://github.com/con-kitty/kitty-cat-c

library
  exposed-modules:
      Kitty.Codegen.FFI.ArraysCC
      Kitty.Codegen.FFI.Call
      Kitty.Codegen.FFI.Foreign
      Kitty.Codegen.FFI.Spec
      Kitty.KGen.KGen
      Kitty.KGen.TH
      Kitty.KGenGenerate.FFI.Bindings
      Kitty.KGenGenerate.FFI.Gen
      Kitty.KGenGenerate.FFI.JIT
      Kitty.KGenGenerate.FFI.Plugin
      Kitty.KGenGenerate.FFI.Spec
      Kitty.KGenGenerate.Test.Equality
      Kitty.KGenGenerate.Test.Error
      Kitty.KGenGenerate.Test.GenerateTyped
      Kitty.KGenGenerate.Test.InputReader
      Kitty.KGenGenerate.Test.IProduct
      Kitty.KGenGenerate.Test.Plugin
      Kitty.KGenGenerate.Test.Pretty
      Kitty.KGenGenerate.Test.Subprocess
      Kitty.Prim.Hedgehog
  ghc-options: -Wall
  build-depends:
      PyF
    , barbies
    , base
    , binary
    , bytestring
    , casing
    , deepseq
    , directory
    , extra
    , haskell-src-exts
    , hedgehog
    , lens
    , process
    , sbv
    , serialise
    , template-haskell
    , text
    , transformers
    , vector
    , unix
    --
    , kitty-cat-c
    , kitty-cat-c-hk-classes
    , kitty-cat-c-recursion
    , kitty-cat-common
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , NoStarIsType
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies
